--- a/TestMain/.classpath
+++ b/TestMain/.classpath
@@ -36,6 +36,13 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/sql/sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/utils/guava-19.0.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/utils/joda-time-2.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/poi-ooxml-schemas-3.13-20150929.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/poi-scratchpad-3.13-20150929.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/dom4j.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/stax2-api-3.1.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/poi-3.13-20150929.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi/poi-ooxml-3.13-20150929.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
@@ -53,5 +60,14 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/com.sun.java.jdk7.win32.x86_64_1.7.0.u45"/>
+	<classpathentry kind="lib" path="D:/MavenRepository/repo/org/apache/poi/poi/3.9/poi-3.9.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.apache.poi"/>
+			<attribute name="maven.artifactId" value="poi"/>
+			<attribute name="maven.version" value="3.9"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
