--- a/TestMain/.classpath
+++ b/TestMain/.classpath
@@ -48,6 +48,20 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring/spring-beans-4.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring/spring-context-4.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring/spring-core-4.1.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-annotations-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-client-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-common-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-hadoop-compat-1.3.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-hadoop2-compat-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-prefix-tree-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-procedure-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-protocol-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hbase/hbase-server-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop/hadoop-common-2.8.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop/hadoop-annotations-2.8.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop/hadoop-hdfs-2.8.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hadoop/hadoop-hdfs-client-2.8.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/sql/mysql-connector-java-5.1.32.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
